# ipmap

./: .gitignore  Cargo.toml  Makefile  README.md  Tauri.linux.toml  Tauri.toml  about.html  build.rs  flake.nix  index.html  ipmap.iss  package-lock.json  package.json  package.nix  pnpm-lock.yaml  pnpm-workspace.yaml  result  setcap.sh  shell.nix  tailwind.config.cjs  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
.cargo/: config.toml  setcap.sh
.github/workflows/: release.yml
backend/: .gitignore  Cargo.toml  Tauri.linux.toml  Tauri.toml  build.rs  tauri.conf.json
backend/icons/: icon.icns
backend/src/: analyze.rs  capture.rs  capture_state.rs  database.rs  db_types.rs  expiry_set.rs  geoip.rs  main.rs  traceroute.rs
crates/child/: Cargo.toml
crates/child-ipc/: Cargo.toml
crates/child-ipc/examples/: parent.rs
crates/child-ipc/src/: error.rs  ipc.rs  lib.rs  windows.rs
crates/child-ipc/src/ipc/: mod.rs  unix.rs  windows.rs
crates/child/src/: command.rs  main.rs
crates/child/src/ipc/: mod.rs  unix.rs  windows.rs
crates/desktop/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
crates/desktop/bindings/: index.ts  package.json  raw.ts
crates/desktop/capabilities/: default.json
crates/desktop/icons/: .gitignore  icon.icns
crates/desktop/src/: commands.rs  db_state.rs  lib.rs  main.rs  pcap.rs  pcap_state.rs  utils.rs
crates/desktop/src/db/: archive.rs  commands.rs  mod.rs  my_loc.rs
crates/desktop/src/pcap/: buf.rs  mod.rs  state.rs
crates/desktop/src/pcap/commands/: capture.rs  traceroute.rs
crates/desktop/src/store/: commands.rs  mod.rs  sources.rs
crates/ipgeo/: Cargo.toml  README.md
crates/ipgeo-state/: Cargo.toml  build.rs
crates/ipgeo-state/src/: commands.rs  lib.rs  my_loc.rs
crates/ipgeo-state/src/preloads/: mod.rs  shared.rs
crates/ipgeo/examples/: combined.rs  ipgeo-cli.rs  perf.rs  single-download.rs  size.rs  time.rs  timing.rs
crates/ipgeo/src/: coordinate.rs  csv_reader.rs  database.rs  detect.rs  download.rs  ip_parser.rs  lib.rs  location.rs  locations.rs  main.rs  mmdb_reader.rs  rkyv_impl.rs  tests.rs
crates/ipgeo/src/reader/: csv.rs  mmdb.rs  mod.rs
crates/isolate-child/: Cargo.toml
crates/isolate-ipc/: Cargo.toml
crates/isolate-parent/: Cargo.toml
crates/isolate-parent/examples/: run-child.rs
crates/isolate-parent/src/: commands.rs  ipc.rs  lib.rs  state.rs
crates/pcap-child/: Cargo.toml
crates/pcap-dyn/: Cargo.toml  README.md  build.rs
crates/pcap-dyn/examples/: pcap-basic.rs
crates/pcap-dyn/src/: buf.rs  cap.rs  ffi.rs  lib.rs  macros.rs
crates/pcap-state/: Cargo.toml
crates/pcap-state/examples/: run-child.rs
crates/pcap-state/src/: buf.rs  commands.rs  ipc.rs  lib.rs
crates/pcap-state/src/commands/: capture.rs  mod.rs  traceroute.rs
crates/pcap-state/src/ipc/: mod.rs  unix.rs  windows.rs
crates/tauri-plugin-ipgeo/: Cargo.toml  README.md  build.rs  package.json  tsconfig.json
crates/tauri-plugin-ipgeo/guest-js/: bindings.ts  index.svelte.ts
crates/tauri-plugin-ipgeo/permissions/: default.toml
crates/tauri-plugin-ipgeo/permissions/autogenerated/: reference.md
crates/tauri-plugin-ipgeo/permissions/autogenerated/commands/: database_state.toml  download_source.toml  lookup_dns.toml  lookup_host.toml  my_location.toml  set_selected_database.toml  unload_database.toml
crates/tauri-plugin-ipgeo/permissions/schemas/: schema.json
crates/tauri-plugin-ipgeo/src/: archive.rs  commands.rs  disk.rs  lib.rs  model.rs  my_loc.rs
crates/tauri-plugin-pcap/: Cargo.toml  README.md  build.rs  package.json
crates/tauri-plugin-pcap/guest-js/: bindings.ts  index.svelte.ts
crates/tauri-plugin-pcap/permissions/: default.toml
crates/tauri-plugin-pcap/permissions/autogenerated/: reference.md
crates/tauri-plugin-pcap/permissions/autogenerated/commands/: init_pcap.toml  lookup_ip.toml  pcap_info.toml  print_error.toml  refresh_cache.toml  run_traceroute.toml  start_capture.toml  stop_capture.toml  traceroute_enabled.toml
crates/tauri-plugin-pcap/permissions/schemas/: schema.json
crates/tauri-plugin-pcap/src/: child.rs  lib.rs  model.rs
crates/tauri-plugin-pcap/src/commands/: capture.rs  mod.rs  my_location.rs  traceroute.rs
crates/trace/: Cargo.toml
crates/treebitmap/: Cargo.toml  README.md
crates/treebitmap/src/: address.rs  lib.rs  rkyv_impl.rs
crates/treebitmap/src/tree_bitmap/: allocator.rs  mod.rs  node.rs
crates/treebitmap/tests/: rand_test.rs  tests.rs
data/: ipmap.desktop  org.freedesktop.policykit.ipmap.policy
frontend/: .gitignore  index.html  info.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  App.vue  Map.svelte  Settings.svelte  Toasts.svelte  app.css  bridge.js  geolocate.ts  main.js  main.ts  map.ts  themes.json  themes.ts  toasts.js  utils.ts
ipdb-city/: Cargo.toml
ipdb-city/src/: lib.rs
pkg/: PKGBUILD
public/: about.html
src/: About.svelte  App.svelte  App.vue  about.ts  app.css  app.html  bindings.ts  credits.html  geolocate.rs  index.html  index.js  ip.rs  ip_broadcast.rs  ip_capture.rs  ipgeo.rs  lib.rs  main.rs  main.ts  map.ts  static_pages.rs  style.css  themes.json  ui.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  capture_state.rs  database.rs  geoip.rs  main.rs  traceroute.rs
src-web/: package-lock.json  setcap.sh  tailwind.config.cjs
src-web/src/: app.d.ts  geo.ts
src/bindings/: DatabaseInfo.ts  Hop.ts  IpRange.ts  IpType.ts  LocationBlock.ts  LocationInfo.ts  ThemeState.ts  TracerouteOptions.ts  capture.svelte.ts  index.ts  raw.ts
src/components/: AboutWindowButton.svelte  CaptureLocationView.svelte  CaptureMode.svelte  DatabaseSelector.svelte  IpView.svelte  Link.svelte  LocationInfoView.svelte  MapView.svelte  ReverseMode.svelte  SearchMode.svelte  ThemeSwitcher.svelte  TracerouteMode.svelte
src/lib/: CaptureDevices.svelte  Databases.svelte  (+1 more)
ui/: .gitignore  package.json  pnpm-lock.yaml  vite.config.js
(+119 files in other folders)
