[workspace]
resolver = "2"
members = [
    "crates/ipgeo",
    "crates/desktop",
    "crates/pcap-dyn",
    "crates/ipgeo-state",
    "crates/pcap-state",
    "crates/child",
    "crates/child-ipc",
]

package.rust-version = "1.86.0"

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["time", "rt", "macros"] }
tauri = { version = "2", features = ["tracing"] }
tauri-plugin-dialog = "2"
thiserror = "2.0.12"
specta = { version = "2.0.0-rc.21", features = ["derive", "function"] }
serde = { version = "*", features = ["derive"] }
tracing = "0.1.41"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
dashmap = "6.1.0"
ip_rfc = "0.1.0"
serde_json = "1.0.140"
postcard = { version = "1.1.2", features = ["alloc"] }

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256
incremental = true

[profile.release]
# opt-level = "z"
# codegen-units = 1
# lto = true
# strip = true

# run build scripts at opt-level 3 because ipgeo-state has to read the database which takes
# 20 seconds in development mode.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
