[workspace]
resolver = "2"
members = [
    "crates/ipgeo",
    "crates/desktop",
    "crates/pcap-dyn",
    "crates/child",
    "crates/child-ipc",
    "crates/tauri-plugin-ipgeo",
    "crates/tauri-plugin-pcap",
]

package.rust-version = "1.86.0"

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "time", "macros"] }
tauri = { version = "2", features = ["tracing"] }
tauri-plugin = { version = "2.5", features = ["build"] }
tauri-plugin-dialog = "2.6.0"
thiserror = "2.0.12"
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }
serde = { version = "*", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
dashmap = "6.1.0"
ip_rfc = "0.1.0"
postcard = { version = "1.1.2", features = ["alloc"] }
anyhow = "1.0.100"
rkyv = "0.8.12"
rustc-hash = "2.1.1"
specta-typescript = "0.0.9"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256
incremental = true

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
strip = true
panic = "abort"

# run build scripts at opt-level 3 because ipgeo-state has to read the database which takes
# 20 seconds in development mode.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3

[profile.dev.package.ipgeo]
opt-level = 3
