[package]
name = "ipmap"
version = "0.3.0"
authors = [
    "Aditya Suresh <ethanaditya@gmail.com>",
    "Grant H. <grantshandy@gmail.com>",
    "Nick Z. <nicholasz2510@gmail.com>",
]
license = "GPL-3.0"
description = "An interactive map that shows connected IP addresses."
repository = "https://github.com/grantshandy/ipmap/"
keywords = ["geolocation", "ip", "locator", "map", "interactive"]
categories = ["network-programming"]
build = "build.rs"
default-run = "ipmap"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.6.2", features = [ "path-all", "dialog-open", "tracing"] }

pcap = "2.0.0"
dns-lookup = "2.0.4"
etherparse = "0.14.3"
ip_rfc = "0.1.0"

rangemap = { version = "1.5.1", features = ["serde1"] }
bincode = "1.3.3"
lazy_static = "1.4.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
base64 = "0.22.1"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
csv = "1.3.0"
rangemap = { version = "1.5.1", features = ["serde1"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
