[package]
name = "ipmap"
version = "3.1.0"
authors = [
    "Aditya Suresh <ethanaditya@gmail.com>",
    "Grant H. <grantshandy@gmail.com>",
    "Nick Z. <nicholasz2510@gmail.com>",
]
license = "GPL-3.0"
description = "An interactive map that shows connected IP addresses."
repository = "https://github.com/grantshandy/ipmap/"
keywords = ["geolocation", "ip", "locator", "map", "interactive"]
categories = ["network-programming"]
build = "build.rs"
default-run = "ipmap"
edition = "2021"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.6.2", default-features = false, features = [ "dialog-message", "path-all", "dialog-open", "tracing", "wry", "objc-exception", "dialog" ] }
pcap = "2.0.0"
dns-lookup = "2.0.4"
etherparse = "0.15.0"
ip_rfc = "0.1.0"
rayon = "1.10.0"
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.4.0"
csv = "1.3.0"
rangemap = { version = "1.5.1", features = ["serde1"] }
compact_str = { version = "0.7.1", features = ["serde"] }
bincode = "1.3.3"
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
half = { version = "2.4.1", features = [ "serde" ] }
miniz_oxide = "0.7.3"
eyre = "0.6.12"
ts-rs = { version = "8.1.0", features = ["uuid-impl"] }
rustc-hash = "1.1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
heck = "0.5.0"
crossbeam-channel = "0.5.13"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
rangemap = { version = "1.5.1", features = ["serde1"] }
compact_str = { version = "0.7.1", features = ["serde"] }
bincode = "1.3.3"
time = { version = "0.3.36", features = ["serde"] }
half = { version = "2.4.1", features = [ "serde" ] }
miniz_oxide = "0.7.3"
eyre = "0.6.12"
tracing = "0.1.40"
ts-rs = "8.1.0"
rustc-hash = "1.1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
heck = "0.5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
