[package]
name = "ipmap"
version = "3.1.0"
authors = [
    "Aditya Suresh <ethanaditya@gmail.com>",
    "Grant H. <grantshandy@gmail.com>",
    "Nick Z. <nicholasz2510@gmail.com>",
]
license = "GPL-3.0"
description = "An interactive map that shows connected IP addresses."
repository = "https://github.com/grantshandy/ipmap/"
keywords = ["geolocation", "ip", "locator", "map", "interactive"]
categories = ["network-programming"]
build = "build.rs"
default-run = "ipmap"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap.workspace = true
dns-lookup.workspace = true
etherparse.workspace = true
ip_rfc.workspace = true
rayon.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lazy_static.workspace = true
csv.workspace = true
rangemap.workspace = true
compact_str.workspace = true
bincode.workspace = true
time.workspace = true
uuid.workspace = true
miniz_oxide.workspace = true
eyre.workspace = true
ts-rs.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
heck.workspace = true
crossbeam-channel.workspace = true
public-ip.workspace = true
rstar.workspace = true
half.workspace = true
trippy-core.workspace = true

[dependencies.tauri]
version = "1.6.2"
default-features = false
features = [
    "shell-open",
    "dialog-confirm",
    "dialog-message",
    "path-all",
    "dialog-open",
    "tracing",
    "wry",
    "objc-exception",
    "dialog",
]

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
serde.workspace = true
csv.workspace = true
rangemap.workspace = true
compact_str.workspace = true
bincode.workspace = true
time.workspace = true
miniz_oxide.workspace = true
eyre.workspace = true
tracing.workspace = true
ts-rs.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
heck.workspace = true
rstar.workspace = true
half.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
