[package]
name = "ipdb-city"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
csv.workspace = true
rangemap.workspace = true
compact_str.workspace = true
time.workspace = true
eyre.workspace = true
tracing.workspace = true
ts-rs.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
heck.workspace = true
rstar.workspace = true
half.workspace = true