[package]
name = "ipdb-city"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rangemap = { version = "1.5.1", features = ["serde1"] }
compact_str = { version = "0.7.1", features = ["serde"] }
eyre = "0.6.12"
indexmap = { version = "2.2.6", features = ["serde"] }
heck = "0.5.0"
rstar = { version = "0.12.0", features = ["serde"] }
half = { version = "2.4.1", features = ["serde"] }

tracing.workspace = true
ts-rs.workspace = true
rustc-hash.workspace = true
time.workspace = true
serde.workspace = true
