[package]
name = "ipmap"
version = "3.1.0"
authors = [
    "Aditya Suresh <ethanaditya@gmail.com>",
    "Grant H. <grantshandy@gmail.com>",
    "Nick Z. <nicholasz2510@gmail.com>",
]
license = "GPL-3.0"
description = "An interactive map that shows connected IP addresses."
repository = "https://github.com/grantshandy/ipmap/"
keywords = ["geolocation", "ip", "locator", "map", "interactive"]
categories = ["network-programming"]
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.0.0-beta.23", features = [] }
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-shell = "2.0.0-beta.9"
tauri-plugin-os = "2.0.0-beta.8"

ipdb-city = { path = "../ipdb-city/" }

crossbeam-channel = "0.5.13"
public-ip = "0.2.2"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.18"
serde_json = "1.0.120"
dashmap = "5.5.3"
rayon = "1.10.0"
ip_rfc = "0.1.0"
pcap = "2.0.0"
dns-lookup = "2.0.4"
etherparse = "0.15.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
trippy-core = { git = "https://github.com/fujiapple852/trippy", package = "trippy-core" }
trippy-privilege = { git = "https://github.com/fujiapple852/trippy", package = "trippy-privilege" }

serde.workspace = true
csv.workspace = true
rangemap.workspace = true
compact_str.workspace = true
bincode.workspace = true
time.workspace = true
miniz_oxide.workspace = true
eyre.workspace = true
tracing.workspace = true
ts-rs.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
heck.workspace = true
rstar.workspace = true
half.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }
bincode.workspace = true
miniz_oxide.workspace = true
ipdb-city = { path = "../ipdb-city/" }
