[package]
name = "ipmap"
version = "3.1.0"
authors = [
    "Aditya Suresh <ethanaditya@gmail.com>",
    "Grant H. <grantshandy@gmail.com>",
    "Nick Z. <nicholasz2510@gmail.com>",
]
license = "GPL-3.0"
description = "An interactive map that shows connected IP addresses."
repository = "https://github.com/grantshandy/ipmap/"
keywords = ["geolocation", "ip", "locator", "map", "interactive"]
categories = ["network-programming"]
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.0.0-beta.23", features = [] }
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-shell = "2.0.0-beta.9"
tauri-plugin-os = "2.0.0-beta.8"

# shared database & compression w/build script
bincode = "1.3.3"
miniz_oxide = "0.7.3"
ipdb-city = { path = "../ipdb-city/" }

# net utils
public-ip = "0.2.2"
dns-lookup = "2.0.4"

# general utils
tracing-subscriber = "0.3.18"
serde_json = "1.0.120"
serde.workspace = true
tracing.workspace = true
ts-rs.workspace = true
rustc-hash.workspace = true

# packet capture
dashmap = "5.5.3"
crossbeam-channel = "0.5.13"
rayon = "1.10.0"
ip_rfc = "0.1.0"
pcap = "2.0.0"
etherparse = "0.15.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
time.workspace = true

# traceroute
trippy-core = { git = "https://github.com/fujiapple852/trippy", package = "trippy-core" }
trippy-privilege = { git = "https://github.com/fujiapple852/trippy", package = "trippy-privilege" }

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

# shared database & compression
bincode = "1.3.3"
miniz_oxide = "0.7.3"
ipdb-city = { path = "../ipdb-city/" }
