[package]
name = "child-ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
thiserror.workspace = true

base64 = "0.22.1"

serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
specta = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
fastrand = "2.3.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

[features]
parent = ["specta", "dep:tracing", "dep:serde_json"]
child = ["dep:serde_json"]
specta = ["dep:specta"]
