[package]
name = "child-ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
thiserror.workspace = true

postcard = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
specta = { workspace = true, optional = true }

ipc-channel = { version = "0.20.0", optional = true }
base64 = { version = "0.22.1", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
optional = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

[dev-dependencies]
ipc-channel = "0.20.0"

[features]
parent = ["ipc", "dep:tracing", "dep:specta", "dep:windows-sys"]
child = ["ipc"]
ipc = ["dep:base64", "dep:ipc-channel", "dep:postcard"]
