[package]
name = "child-ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
thiserror.workspace = true

postcard = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
specta = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

ipc-channel = { version = "0.20.0", optional = true }
base64 = { version = "0.22.1", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
optional = true
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_System_Threading",
]

[dev-dependencies]
ipc-channel = "0.20.0"
tokio.workspace = true

[features]
parent = ["ipc", "dep:tracing", "dep:specta", "dep:windows-sys", "dep:tokio"]
child = ["ipc"]
ipc = ["dep:base64", "dep:ipc-channel", "dep:postcard"]

[[example]]
name = "parent"
path = "examples/parent.rs"
required-features = ["parent"]
