[package]
name = "ipmap"
version = "5.0.0"
edition = "2024"

[lib]
name = "ipmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
child-ipc = { path = "../child-ipc" }

[dependencies]
tauri = { workspace = true, features = [] }
specta.workspace = true
serde.workspace = true
tracing.workspace = true
tauri-specta.workspace = true
tokio.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror.workspace = true
dashmap.workspace = true
tauri-plugin-opener = "2"
tauri-plugin-dialog.workspace = true
specta-typescript = "0.0.9"
child-ipc = { path = "../child-ipc", features = ["specta", "parent"] }
ipgeo = { path = "../ipgeo" }
dns-lookup = "2.0.4"
public-ip-address = "0.3.4"
