[package]
name = "ipmap"
version = "5.0.0"
edition = "2024"

[lib]
name = "ipmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
specta-typescript.workspace = true

[dependencies]
tauri = { workspace = true, features = [] }
tokio.workspace = true
serde.workspace = true

tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog.workspace = true
tauri-plugin-ipgeo = { path = "../tauri-plugin-ipgeo" }
tauri-plugin-pcap = { path = "../tauri-plugin-pcap" }

specta.workspace = true
tauri-specta.workspace = true
