[package]
name = "ipgeo-state"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap.workspace = true
serde.workspace = true
tauri.workspace = true
specta.workspace = true
tauri-specta.workspace = true
tracing.workspace = true
tokio.workspace = true
postcard.workspace = true
tauri-plugin-dialog.workspace = true

ipgeo = { path = "../ipgeo" }
dns-lookup = "2.0.4"
public-ip-address = "0.3.4"

[build-dependencies]
ipgeo = { path = "../ipgeo" }
postcard.workspace = true
serde.workspace = true
