[package]
name = "ipgeo"
version = "0.1.0"
edition = "2024"

[dependencies]
compact_str = { version = "0.9.0", features = ["serde"] }
csv = "1.3.1"
flate2 = "1.1.1"
heck = "0.5.0"
rustc-hash = "2.1.1"
indexmap = { version = "2.9.0", features = ["serde"] }
thiserror.workspace = true
specta.workspace = true
serde.workspace = true
maxminddb = "0.26.0"
ipnetwork = "0.21.1"
ipnet = "2.11.0"
treebitmap = { path = "../treebitmap", features = ["serde"] }

[dev-dependencies]
maxminddb = "0.26.0"
ipnetwork = "0.21.1"
serde.workspace = true
