[package]
name = "ipgeo"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { version = "2.9.0", features = ["serde"] }
compact_str = { version = "0.9.0", features = ["serde"] }
csv = "1.4.0"
rustc-hash = "2.1.1"
flate2 = "1.1.2"
maxminddb = "0.27.0"
ipnetwork = "0.21.1"
ipnet = "2.11.0"
treebitmap = { path = "../treebitmap/", features = ["serde"] }
heck = "0.5.0"

thiserror.workspace = true
specta.workspace = true
serde.workspace = true

dashmap = { workspace = true, optional = true }
anyhow = { version = "1.0.100", optional = true }
reqwest = { version = "0.12.26", features = ["stream"], optional = true }
async-compression = { version = "0.4.36", features = ["tokio", "gzip"], optional = true }
tokio-util = { version = "0.7.17", features = ["io"], optional = true }
unix-time = { version = "0.1.5", optional = true}
futures = { version = "0.3.31", optional = true}
tokio = { workspace = true, optional = true }

[dev-dependencies]
postcard.workspace = true
tokio.workspace = true

[features]
download = [
    "dep:dashmap",
    "dep:anyhow",
    "dep:reqwest",
    "dep:async-compression",
    "dep:tokio-util",
    "dep:unix-time",
    "dep:futures",
    "dep:tokio"
]
