[package]
name = "pcap-dyn"
version = "0.1.0"
edition = "2024"

[dependencies]
dlopen2 = "0.8.0"
etherparse = "0.18.0"
libc = "0.2.171"
crossbeam-channel = "0.5.15"

ip_rfc.workspace = true
tracing.workspace = true
specta = { workspace = true, optional = true }
dashmap.workspace = true

child-ipc = { path = "../child-ipc" }

[dev-dependencies]
human_bytes = "0.4.3"
tracing-subscriber.workspace = true

[features]
specta = ["dep:specta", "child-ipc/specta"]
