[package]
name = "pcap-state"
version = "0.1.0"
edition = "2024"

[dependencies]
child-ipc = { path = "../child-ipc" }
ipgeo-state = { path = "../ipgeo-state" }
tauri.workspace = true
specta.workspace = true
tracing.workspace = true
tauri-specta.workspace = true
serde.workspace = true
serde_json.workspace = true
