[package]
name = "pcap-state"
version = "0.1.0"
edition = "2024"

[dependencies]
child-ipc = { path = "../child-ipc" }
ipgeo-state = { path = "../ipgeo-state" }
tauri.workspace = true
specta.workspace = true
tracing.workspace = true
tauri-specta.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
fastrand = "2.3.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]
