[package]
name = "tauri-plugin-ipgeo"
version = "0.1.0"
exclude = ["/dist", "/guest-js", "/node_modules"]
edition = "2024"
links = "tauri-plugin-ipgeo"

[dependencies]
ipgeo = { path = "../ipgeo", features = ["download"] }

tauri.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
rustc-hash.workspace = true
dashmap.workspace = true
rkyv.workspace = true
serde.workspace = true

memmap2 = "0.9.9"
time = "0.3.44"
dns-lookup = "3.0.1"

specta.workspace = true
tauri-specta.workspace = true

[dev-dependencies]
specta-typescript.workspace = true

[build-dependencies]
tauri-plugin.workspace = true
