[package]
name = "treebitmap"
version = "0.6.0"
authors = [
    "Hroi Sigurdsson <hroi@asdf.dk>",
    "Jakub Onderka <ahoj@jakubonderka.cz>",
]
description = "A Forked Forked version of fast IPv4/IPv6 lookup trie."
license = "MIT"
repository = "https://github.com/JakubOnderka/treebitmap"
documentation = "https://docs.rs/ip_network_table-deps-treebitmap/"
readme = "README.md"
keywords = ["ip", "networking", "trie", "cidr"]
categories = ["data-structures", "network-programming"]
edition = "2024"

[dependencies]
serde = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.9"

[features]
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]
